# OptiNetSim-backend

./: .env  .gitignore  README.md  check.py  cli_examples.py  eqpt_config.json  equipment.json  main.py  network.json  pyproject.toml  result.json  si_config.json
app/api/v1/: router.py
app/api/v1/endpoints/: connections.py  elements.py  global_settings.py  import_export.py  networks.py  services.py  simulation.py  simulations.py
app/core/: config.py  database.py
app/crud/: crud_network.py
app/models/: common.py  network.py  simulation.py
app/services/: gnpy_adapter.py  simulation_service.py
oopt/: .docker-entry.sh
oopt/docs/: model.rst
oopt/gnpy/example-data/: node.json
oopt/gnpy/tools/: cli_examples.py  flaskrun.py
