[project]
name = "optical-network-topology-api"
version = "0.1.0"
description = "A FastAPI service for managing optical network topologies with MongoDB."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "motor>=3.7.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "uuid6>=2025.0.1",
    "uvicorn[standard]>=0.35.0",
]
